# 12

./: .gitignore  GitHub - Shortcut.lnk  Procfile  README.md  db.sqlite3  package-lock.json  pyproject.toml  requirements.txt  routing.py  start_server.py  test_asgi.py
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
app/src/: .env  App.css  App.jsx  index.css  main.jsx  signals.py
app/src/context/: DataProvider.jsx
app/src/utils/: AddProductContext.jsx  BuyerDarkModeContext.jsx  CartContext.jsx  ChatContext.jsx  DarkModeContext.jsx  LikeBookmarkContext.jsx  NotificationContext.jsx  api.js  (+7 more)
config/: asgi.py  settings.py  urls.py
media/products/: .jpg_ZIjWCHn
products/services/: algorithm.py  trending.py
products/views/: feeds.py
trendsync/: admin.py  apps.py  consumers.py  dusupay_utils.py  main_views.py  middleware.py  models.py  permissions.py  pesapal_utils.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
trendsync/migrations/: 0001_initial.py  0002_pesapalconfig_address_iso_country_code_and_more.py  0002_simplenotification.py  0003_sellerrating.py  0004_delete_sellerrating.py  0004_sellerproductbookmark_sellerproductlike.py  0005_alter_sellerproductlike_unique_together_and_more.py  0006_alter_seller_trust.py  0007_dusupayconfig_delete_pesapalconfig_and_more.py  0008_seller_bank_account_seller_bank_name_and_more.py  0009_alter_quickdeal_options_remove_quickdeal_priority_and_more.py  0010_chatmessage.py  0011_report.py  0012_buyer_recent_searches.py
trendsync/views/: __init__.py  auth_views.py
(+55 files in other folders)
